# pactrun

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  cost_safety_index.md
examples/: drift.py  recovery.py  runaway_cost.py  three_in_one.py  tool_guardrails.py
pactrun/: __init__.py  contract.py  cost_model.py  loader.py  session.py  wrap.py
pactrun/adapters/: __init__.py  _base.py  anthropic.py  gemini.py  langchain.py  litellm.py  manual.py  mcp.py  openai.py
pactrun/cli/: main.py
pactrun/core/: __init__.py  enums.py  errors.py  models.py
pactrun/drift/: __init__.py  detectors.py  metrics.py  monitor.py
pactrun/observability/: __init__.py  audit.py  otel.py
pactrun/predicates/: __init__.py  base.py  behavioral.py  cost.py  flow.py  output.py  ratelimit.py  timing.py  tools.py
pactrun/pytest_plugin/: plugin.py
pactrun/recovery/: __init__.py  approval.py  digest.py  engine.py  webhook.py
scripts/: cost_safety_index.py
tests/: conftest.py  test_adapter_anthropic.py  test_adapter_gemini.py  test_adapter_langchain.py  test_adapter_litellm.py  test_adapter_manual.py  test_adapter_mcp.py  test_adapter_openai.py  test_audit_observer.py  test_check_on_resolution.py  test_cli.py  test_contract.py  test_cost_model.py  test_cost_safety_index.py  test_drift_detectors.py  test_drift_monitor.py  test_loader.py  test_models.py  test_otel.py  test_predicates_arg_value.py  test_predicates_behavioral.py  test_predicates_consent.py  test_predicates_cost.py  test_predicates_flow.py  test_predicates_host.py  test_predicates_injection_exfil.py  test_predicates_isolation.py  test_predicates_json.py  test_predicates_multi_party.py  test_predicates_no_secrets.py  test_predicates_output.py  test_predicates_ratelimit.py  test_predicates_ratelimit_round2.py  test_predicates_timing.py  test_predicates_tool_args.py  test_predicates_tool_error_rate.py  test_predicates_tools.py  test_predicates_trifecta.py  test_pytest_plugin.py  test_recovery.py  (+6 more)
