[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactrun"
version = "0.1.0"
description = "Behavioral contracts for AI agents — declare session-level cost, tool, and drift limits and enforce them at runtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Beyhan Gul" },
]
keywords = ["ai", "agents", "contracts", "guardrails", "safety", "compliance", "drift", "enforcement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.2"]
evalcraft = ["evalcraft>=0.1.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "langchain-core>=0.2",
    "evalcraft>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
pactrun = "pactrun.cli.main:cli"

[project.urls]
Homepage = "https://github.com/beyhangl/agentpact"
Repository = "https://github.com/beyhangl/agentpact"
Issues = "https://github.com/beyhangl/agentpact/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["pactrun"]
